# jogoDaForca

./: .gitignore  LICENSE  README.md
fs/forca/forca/: Program.fs
hs/forca/: .cabal-fmt-31751-5Ocm86XddI6y  CHANGELOG.md  forca.cabal  forcarecordes.txt  palavras.txt  palavrasforca.txt
hs/forca/app/: Forca.hs  Main.hs
hs/teste/: CHANGELOG.md  teste.cabal
hs/teste/app/: Main.hs
ja/forca/: settings.gradle
ja/forca/app/: build.gradle
ja/forca/app/src/main/java/forca/: App.java  Forca.java
ja/forca/app/src/test/java/forca/: AppTest.java
py/: forca.py  tictactoe1.py  tictactoe2.py
py/forca/src/: forca.py
ts/forca/: criaprojeto.txt  forcarecordes.json  package-lock.json  package.json  palavrasforca.json  tsconfig.json
ts/forca/src/: index.ts
